--- a/HTML/content.html
+++ b/HTML/content.html
@@ -1,4 +1,7 @@
 <!-- Common tags for page content -->
 
-<hi> Heading </hi>
-<hi2> SubHeading </hi2>
+<h1> Heading </h1>
+<h2> SubHeading </h2>
+
+<a href="https://www.lipsum.com"> link </a>
+<img src="http://via.placeholder.com/350x350">
