--- a/bootstrap/SLU/academics.html
+++ b/bootstrap/SLU/academics.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <title>Bootstrap Grid System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="Stylesheet" href="custom.css"
   </head>
 
   <body>
-    <header class="navbar navbar-expand navbar-dark bg-dark">
+    <header class="navbar navbar-expand navbar-dark SCARLET">
       <a href="index.html" class="navbar-brand"> SLU </a>
       <nav class= "navbar-nav">
         <a href="Students.html" class="nav-item nav-link active"> Student </a>
@@ -17,7 +18,7 @@
     </header>
     <div class="container-fluid">
       <div class="row pl-3">
-        <nav class="col-auto nav nav-pills flex-column">
+        <nav class="col-auto nav nav-pills flex-column BROWN">
           <a href="academics.html" class="nav-item nav-link active mt-2">academics</a>
           <a href="life.html" class="nav-item nav-link">life</a>
         </nav>
